--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link href="./resources/css/styles.css" rel="stylesheet">
+    <link href="/resources/css/styles.css" rel="stylesheet">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" as="style"
         onload="this.rel='stylesheet'">
     <noscript>
