--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link href="/resources/css/styles.css" rel="stylesheet">
+    <link href="/Roof-Wash-Specialists/resources/css/styles.css" rel="stylesheet">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" as="style"
         onload="this.rel='stylesheet'">
     <noscript>
@@ -18,8 +18,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
-    <script defer src="resources/js/accessibility.js"></script>
-    <script defer src="resources/js/staggerAnimation.js"></script>
+    <script defer src="/Roof-Wash-Specialists/resources/js/accessibility.js"></script>
+    <script defer src="/Roof-Wash-Specialists/resources/js/staggerAnimation.js"></script>
 </head>
 
 <body class="d-flex min-vh-100 text-center">
